test/good/generics/basic06.px

func add<A>(x: A, y: A): A def
    return x + y

print add(3, 4) // 2
print add(3.0, 4.0) / 2
