test/bad/generics/type03.px

func f<Any T>(T x, T y) T def
    return x + y
